kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hackathon
  name: hackathon
  labels:
    name: hackathon
spec:
  selector:
    matchLabels:
      name: hackathon
  replicas: 1
  template:
    metadata:
      labels:
        name: hackathon
    spec:
      containers:
        - name: hackathon
          image: ${image_url}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: hackathon
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
