kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: hackathon
  name: hackathon
  labels:
    name: hackathon
    service: hackathon
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    name: hackathon
